			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

21-Dec-2001
~~~~~~~~~~~
New 'Show image thumnails' option to set this as the default (requested by
Kristian Rink).

20-Dec-2001
~~~~~~~~~~~
New thumbnail system. 'Create Thumbs' is now 'Show Thumbnails' and can
be turned on and off. Thumbnails are loaded in the background, and a progress
bar is displayed in the filer window.
Replaced old Gtk+-1.2.x text widget in action windows with new one.

19-Dec-2001
~~~~~~~~~~~
Improved error reporting.
Improved sizing code when details are on.

18-Dec-2001
~~~~~~~~~~~
Updated to new version 0.4 of the thumbnails standard.
Added 'Quiet' check box to action windows. Quiet button now turns on
check box and does 'Yes'.

17-Dec-2001
~~~~~~~~~~~
Gtk+-2.0 uses UTF-8 for strings. Translation files are now converted to
UTF-8 as they are loaded.
Added a missing #ifdef for the regex code (Couderc Damien).
All file leafnames now use AA fonts with Gtk+-2.0 (details are still
fixed, though).

16-Dec-2001
~~~~~~~~~~~
Closing a window with a keypress caused warnings to appear (reported by
Fabien Coutant).
Updated Spanish translation (Marcelo Ramos).
New 'Single click nagivation on the pinboard' option (requested by
Michael).
Fix for compiling problem on NetBSD (Eric Gillespie, Jr.).

Internal changes to options system:
- Options can be used as soon as they are registered (not just once the
  filer is fully initialised).
- New widget types can be registered in a modular fashion.

13-Dec-2001 (Release 1.1.9)
~~~~~~~~~~~
More fixes for panel resizing (reported by Stephen Watson).
Target mode, dragging an unselected item, and auto-selecting an item when
opening the menu now all work without grabbing the primary selection.
Finished new scanning code (image == NULL is now OK everywhere).

12-Dec-2001
~~~~~~~~~~~
Clicking on an item which is selected, but not part of the primary selection,
now reclaims the selection.
Removed default minibuffer option for now.