@@ -6,6 +6,7 @@
 ~~~~~~~~~~~
 New 'Show image thumnails' option to set this as the default (requested by
 Kristian Rink).
+Got details working again with Gtk+-1.2 (spotted by Kristian Rink).
 
 20-Dec-2001
 ~~~~~~~~~~~
